analysis/spring-framework/step_1/logs/7227-99cc7d5.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovywarning: [options] bootstrap class path not set in conjunction with -source 1.6
1 warning

:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
             ^
/home/ubuntu/bugs/spring-framework/spring-tx/src/main/java/org/springframework/transaction/interceptor/TransactionAspectSupport.java:61: error: unmappable character for encoding ASCII
 * @author St??phane Nicoll
              ^

:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava
:spring-web:compileGroovy UP-TO-DATE
:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileJava
:spring-orm:processResources UP-TO-DATE
:spring-orm:classes
:spring-orm-hibernate4:compileJava
:spring-orm-hibernate4:processResources UP-TO-DATE
:spring-orm-hibernate4:classes
:spring-orm:jar
:spring-aspects:compileJava
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-beans-groovy:jar SKIPPED
:spring-beans-groovy:sourcesJar SKIPPED
:spring-beans-groovy:assemble
:spring-beans-groovy:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-framework-bom:assemble UP-TO-DATE
:spring-framework-bom:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-instrument-tomcat:compileJava
:spring-instrument-tomcat:processResources UP-TO-DATE
:spring-instrument-tomcat:classes
:spring-instrument-tomcat:jar
:spring-instrument-tomcat:sourcesJar
:spring-instrument-tomcat:assemble
:spring-instrument-tomcat:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-messaging:compileJava/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/Reactor2TcpClient.java:146: error: cannot find symbol
		Promise<Boolean> promise = tcpClient.open();
		                                    ^
  symbol:   method open()
  location: variable tcpClient of type TcpClient<Message<P>,Message<P>>
  where P is a type-variable:
    P extends Object declared in class Reactor2TcpClient
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/Reactor2TcpClient.java:156: error: cannot find symbol
		Stream<Boolean> stream = tcpClient.open(new ReactorRectonnectAdapter(strategy));
		                                  ^
  symbol:   method open(ReactorRectonnectAdapter)
  location: variable tcpClient of type TcpClient<Message<P>,Message<P>>
  where P is a type-variable:
    P extends Object declared in class Reactor2TcpClient
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/Reactor2TcpClient.java:168: error: cannot find symbol
				.finallyDo(new Consumer<Signal<ChannelStream<Message<P>, Message<P>>>>() {
				^
  symbol:   method finallyDo(<anonymous Consumer<Signal<ChannelStream<Message<P>,Message<P>>>>>)
  location: variable tcpClient of type TcpClient<Message<P>,Message<P>>
  where P is a type-variable:
    P extends Object declared in class Reactor2TcpClient
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/Reactor2TcpClient.java:222: error: cannot find symbol
						return client.close();
						             ^
  symbol:   method close()
  location: variable client of type TcpClient<Message<P>,Message<P>>
  where P is a type-variable:
    P extends Object declared in class Reactor2TcpClient
/home/ubuntu/bugs/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/tcp/reactor/Reactor2TcpConnection.java:47: error: cannot find symbol
		this.channelStream.sink(this.sink);
		                  ^
  symbol:   method sink(Broadcaster<Message<P>>)
  location: variable channelStream of type ChannelStream<Message<P>,Message<P>>
  where P is a type-variable:
    P extends Object declared in class Reactor2TcpConnection
5 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-messaging:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 44.506 secs
